--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
     <head>
         <title>Cards</title>
 
-        <link rel="stylesheet" href="node_modules/deck-of-cards/example/example.css">
+        <link rel="stylesheet" href="example/example.css">
     </head>
     <body>
-        <script src="node_modules/deck-of-cards/dist/deck.min.js"></script>
+        <script src="dist/deck.min.js"></script>
 
         <div id="container"></div>
 
