--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         <div id="container"></div>
 
         <script>
+            document.body.style.transform = 'scale(150%)';
+            document.body.style['-o-transform'] =  'scale(150%)';
+            document.body.style['-webkit-transform'] =  'scale(150%)';
+            document.body.style['-moz-transform'] =  'scale(150%)';
+            
             var $container = document.getElementById('container');
 
             // create Deck
