--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <body>
         <script src="dist/deck.min.js"></script>
 
-        <div id="container"><button onClick="deck.shuffle()">Shuffle</button></div>
+        <div id="controls"><button onClick="deck.shuffle()">Shuffle</button></div>
+        <div id="container"></div>
 
         <script>
             document.body.style.transform = 'scale(150%)';
