--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <script src="dist/deck.min.js"></script>
 
-        <div id="controls"><button onClick="deck.shuffle()">Shuffle</button></div>
+        <button style="float: left;" onClick="deck.shuffle()">Shuffle</button>
         <div id="container"></div>
 
         <script>
