--- a/index.html
+++ b/index.html
@@ -7,15 +7,10 @@
     <body>
         <script src="dist/deck.min.js"></script>
 
-        <button style="float: left;" onClick="deck.shuffle()">Shuffle</button>
+        <button style="position: fixed;" onClick="deck.shuffle()">Shuffle</button>
         <div id="container"></div>
 
-        <script>
-            document.body.style.transform = 'scale(150%)';
-            document.body.style['-o-transform'] =  'scale(150%)';
-            document.body.style['-webkit-transform'] =  'scale(150%)';
-            document.body.style['-moz-transform'] =  'scale(150%)';
-            
+        <script>           
             var $container = document.getElementById('container');
 
             // create Deck
