--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             deck.mount($container);
 
             deck.cards.forEach(function (card, i) {
+                card.scale(1.5);
                 card.enableDragging();
                 card.enableFlipping();
             });
