--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <script src="dist/deck.min.js"></script>
 
-        <button style="position: fixed;" onClick="deck.shuffle()">Shuffle</button>
+        <button style="position: fixed; scale: 1.5;" onClick="deck.shuffle()">Shuffle</button>
         <div id="container"></div>
 
         <script>           
@@ -20,7 +20,6 @@
             deck.mount($container);
 
             deck.cards.forEach(function (card, i) {
-                card.scale(1.5);
                 card.enableDragging();
                 card.enableFlipping();
             });
