--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <script src="dist/deck.min.js"></script>
 
-        <button style="position: fixed; scale: 1.5;" onClick="deck.shuffle()">Shuffle</button>
+        <button style="position: fixed; transform: scale(1.5);" onClick="deck.shuffle()">Shuffle</button>
         <div id="container"></div>
 
         <script>           
