--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <body>
         <script src="dist/deck.min.js"></script>
 
-        <button style="position: fixed; transform: scale(1.5);" onClick="deck.shuffle()">Shuffle</button>
+        <div id="controls" style="position: fixed; text-align: center;">
+            <button onClick="deck.shuffle()">Shuffle</button>
+        </div>
         <div id="container"></div>
 
         <script>           
