--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             deck.mount($container);
 
             deck.cards.forEach(function (card, i) {
-                card.$el.scale = 1.5;
+                card.$el.style.scale = 1.5;
                 card.enableDragging();
                 card.enableFlipping();
             });
